--- a/app/components/new-chat.module.scss
+++ b/app/components/new-chat.module.scss
@@ -52,6 +52,11 @@
     animation: slide-in ease 0.4s;
   }
 
+  .announcement {
+    animation: slide-in ease 0.4s;
+    color: #ff0000;
+  }
+
   .actions {
     margin-top: 5vh;
     margin-bottom: 2vh;
